--- a/pom.xml
+++ b/pom.xml
@@ -24,24 +24,33 @@
 		<dependency>
 			<groupId>com.tibco.rendezvous</groupId>
 			<artifactId>tibco-rendezvous</artifactId>
+			<version>8.4</version>
+			<scope>system</scope>
+			<systemPath>C:\tibco\tibrv\8.4\lib\tibrvj.jar</systemPath>
+		</dependency>
+		<!-- 
+		<dependency>
+			<groupId>com.tibco.rendezvous</groupId>
+			<artifactId>tibco-rendezvous</artifactId>
 			<version>7.2</version>
 			<scope>system</scope>
 			<systemPath>${basedir}/lib/tibrvj-7.2.jar</systemPath>
 		</dependency>
+		 -->
 		<dependency>
 			<groupId>io.pivotal.gemfire</groupId>
 			<artifactId>geode-core</artifactId>
-			<version>9.0.1</version>
+			<version>9.0.2</version>
 		</dependency>
 		<dependency>
 			<groupId>io.pivotal.gemfire</groupId>
 			<artifactId>geode-wan</artifactId>
-			<version>9.0.1</version>
+			<version>9.0.2</version>
 		</dependency>
 		<dependency>
 			<groupId>io.pivotal.gemfire</groupId>
 			<artifactId>geode-cq</artifactId>
-			<version>9.0.1</version>
+			<version>9.0.2</version>
 		</dependency>
 	</dependencies>
 	
